# shadw

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: CODEOWNERS
.github/workflows/: release.yml  shadw.yml
src/: error.rs  main.rs  util.rs
src/cli/: agent.rs  init.rs  ls.rs  mod.rs  model.rs  restart.rs  retry.rs  rm.rs  start.rs  status.rs  stop.rs  upgrade.rs  use_model.rs
src/config/: mod.rs
src/daemon/: mod.rs  process.rs  registry.rs  server.rs
src/extraction/: mod.rs
src/models/: download.rs  engine.rs  mod.rs  registry.rs
src/watcher/: conversation.rs  cursor.rs  git.rs  mod.rs
tests/: cli_test.rs
